# bmc-amdtraces

./: README.md  meson.build  meson_options.txt
inc/: trace.hpp
service_files/: xyz.openbmc_project.Traces.service
src/: main.cpp  trace.cpp
